
noinst_PROGRAMS = dump_video encoder_example player_example

dump_video_SOURCES = dump_video.c
dump_video_LDADD = $(DAALA_DEC_LIBS) $(DEPS_LIBS)

encoder_example_SOURCES = encoder_example.c
encoder_example_LDADD = $(DAALA_ENC_LIBS) $(DEPS_LIBS)

player_example_SOURCES = player_example.c
player_example_LDADD = $(DAALA_ENC_LIBS) $(DEPS_LIBS)

